--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Run tests
         working-directory: xtracker/frontend
-        run: npm test -- --coverage --watchAll=false
+        run: npm run test:coverage
 
       - name: Build
         working-directory: xtracker/frontend
