--- a/xtracker/frontend/package.json
+++ b/xtracker/frontend/package.json
@@ -33,7 +33,8 @@
     "tailwindcss": "^3.4.1",
     "vite": "^5.4.2",
     "vitest": "^1.0.4",
-    "@vitest/coverage-v8": "^1.0.4"
+    "@vitest/coverage-v8": "^1.0.4",
+    "jsdom": "^24.0.0"
   }
 }
 
